about.html changes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <ul class="nav">
                           <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                          
-                          <li class="scroll-to-section"><a href="#apply">About Us</a></li>
+                          <li class="scroll-to-section"><a href="/aboutus.html">About Us</a></li>
                           <li class="scroll-to-section"><a href="#apply">Services</a></li>
                            <li><a href="meetings.html">Events</a></li>
                           <li class="scroll-to-section"><a href="#apply">Apply Now</a></li>
